<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/repo_dest"
            android:title="@string/TrendingRepos"
    />
    <item
            android:id="@+id/login_dest"
            android:title="@string/Issues"
    />
</menu>
