...
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
    />

    <TextView
            android:id="@+id/gitHubLoginDisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginDisplay"
            android:gravity="center"
            style="@style/LoginDisplayText"
            app:layout_constraintTop_toBottomOf="@id/userPassTextTop"
    />

    <LinearLayout
            android:id="@+id/userPassLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/gitHubLoginDisplayText"
            app:layout_constraintLeft_toRightOf="@id/userPassTextLeft"
            app:layout_constraintRight_toLeftOf="@id/userPassTextRight"
...
