<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/issueCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/IssueCommentRecycleViewSwipeRefresh"
...
