...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
        >
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/IssueList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
            />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
