<resources>
    <string name="app_name">Android Training</string>
    <string name="action_settings">Settings</string>
    <string name="minutesPassedSinceRefresh">Last updated %s</string>
    <string name="authorAndRepoName">%s / %s</string>
    <string name="dailyStars">%s star%s today</string>
    <string name="networkDialogMessage">A Network failure occurred</string>
    <string name="Ok">OK</string>
    <string name="trendingTitle">Top Kotlin repos past 24 hours</string>
    <string name="noDescAvail">No Description Available</string>
    <string name="trending">Trending</string>
    <string name="genericNetworkError">A network failure occurred</string>
    <string name="fetchRepos">Fetching Repos</string>
    <string name="fetchIssues">Checking for new issues</string>
    <string name="fetchComments">Checking for new comments</string>
    <string name="error">Error</string>
    <string name="TrendingRepos">Trending Repos</string>
    <string name="Issues">Issues</string>
    <string name="LoginButton">   Login   </string>
    <string name="LoginDisplay">Log into GitHub</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="Login">Login</string>
    <string name="issueDesc">opened by: %s, for repository: %s</string>
    <string name="error_network_connection_issue">You have a bad Internet connection. Reconnect, then try again.</string>
    <string name="error_500_600_response_code">Sorry! There seems to be an error with the system. The team has been notified. Try again later.</string>
    <string name="unhandled_http_result_message">Sorry! There seems to be an issue. The team has been notified. Try again later.</string>
    <string name="nothingToShow">There\'s nothing to show!</string>
</resources>
