<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RepoLayout"
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
>
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/RepoImage"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginEnd="10dp"
    />

    <TextView
            style="@style/h3link"
            android:id="@+id/RepoNameAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorAndRepoName"
            android:layout_toEndOf="@id/RepoImage"

    />

    <TextView
            style="@style/h2"
            android:id="@+id/RepoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@+id/RepoNameAuthor"
            android:layout_toEndOf="@id/RepoImage"
    />


    <TextView
            style="@style/h2"
            android:id="@+id/RepoStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dailyStars"
            android:textSize="14sp"
            android:layout_below="@+id/RepoDescription"
            android:layout_toEndOf="@id/RepoImage"
    />


</RelativeLayout>