<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/nothing_to_show"/>

    <LinearLayout
            android:id="@+id/repoLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <TextView
                style="@style/h3"
                android:id="@+id/TrendingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trendingTitle"
                android:textAlignment="center"
                android:layout_gravity="center"

        />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/RecycleViewSwipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
        >

            <androidx.recyclerview.widget.RecyclerView
                    android:background="@android:color/white"
                    android:id="@+id/RepoList"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
                android:textColor="@android:color/black"
                android:id="@+id/LastRefreshTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textAlignment="center"
        />

    </LinearLayout>
</FrameLayout>
